--- a/.github/workflows/web-test.yml
+++ b/.github/workflows/web-test.yml
@@ -2,9 +2,7 @@ name: Web Tests
 
 on:
   push:
-    branches:
-      - main
-      - issue-*
+    branches: [ main, issue-* ]
   pull_request:
   workflow_dispatch:
 
@@ -16,11 +14,12 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "pnpm"
+          cache: pnpm
       - uses: pnpm/action-setup@v4
         with:
-          version: 10.17.1
-          run_install: false
           package_json_file: apps/web/package.json
+          standalone: true
+          run_install: false
+      - run: pnpm -v
       - run: pnpm -C apps/web install --frozen-lockfile=false
       - run: pnpm -C apps/web test:run
