--- a/.github/workflows/ci-min.yml
+++ b/.github/workflows/ci-min.yml
@@ -17,7 +17,7 @@ jobs:
           cache: pnpm
       - uses: pnpm/action-setup@v4
         with:
-          standalone: true
+          standalone: true        # lee packageManager del package.json raíz
           run_install: false
       - run: pnpm -v
       - run: pnpm -C apps/web install --frozen-lockfile=false
