--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,12 +15,15 @@
     "e2e:report": "playwright show-report"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.21",
+    "idb": "^8.0.0",
     "idb-keyval": "^6.2.2",
     "oidc-client-ts": "^2.3.0",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
@@ -29,13 +32,15 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@vitejs/plugin-react": "^4.3.0",
-    "@vitest/ui": "^3.2.4",
+    "@vitest/coverage-v8": "3.2.4",
+    "@vitest/ui": "3.2.4",
     "jsdom": "^27.0.0",
     "typescript": "^5.4.5",
     "vite": "^5.3.4",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.4",
+    "vitest": "3.2.4",
     "whatwg-fetch": "^3.6.20"
   },
   "packageManager": "pnpm@10.17.1"
 }
+
