Chore/web ci stability (#32)
* chore(ci): GitHub Pages workflow (web-pages)

* chore(ci): web-ci + api-ci

* chore: ignore local sqlite nurseos.db

* chore: stop tracking local sqlite nurseos.db

* merge(pr#28): conflictos resueltos

* chore: ignore local sqlite nurseos.db

* test: vitest global setup y exclusión de e2e por defecto

--- a/.github/workflows/web-test.yml
+++ b/.github/workflows/web-test.yml
@@ -1,11 +1,9 @@
 name: Web Tests
 
 on:
-<<<<<<< HEAD
   push: { branches: [ main, issue-* ] }
   pull_request:
   workflow_dispatch:
-=======
   push:
     paths:
       - "apps/web/**"
@@ -14,14 +12,13 @@ on:
     paths:
       - "apps/web/**"
       - ".github/workflows/web-test.yml"
->>>>>>> fdfd9c9 (test(frontend): vitest setup + storage/store utils + web-test workflow)
+main
 
 jobs:
   vitest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-<<<<<<< HEAD
       - uses: actions/setup-node@v4
         with:
           node-version: "20"
@@ -38,7 +35,6 @@ jobs:
 
 
 
-=======
       - uses: pnpm/action-setup@v3
         with:
           version: 9
@@ -47,5 +43,5 @@ jobs:
           node-version: 20
           cache: "pnpm"
       - run: pnpm install --frozen-lockfile
-      - run: pnpm -C apps/web test:run
->>>>>>> fdfd9c9 (test(frontend): vitest setup + storage/store utils + web-test workflow)
+      - run: pnpm -C apps/web test:run 
+      main
