--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,6 +3,17 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui",
+    "e2e:report": "playwright show-report"
+  },
   "dependencies": {
     "@tanstack/react-query": "^5.51.21",
     "idb": "^8.0.0",
@@ -45,3 +56,4 @@
     "test": "vitest"
   }
 }
+
