--- a/.github/workflows/web-test.yml
+++ b/.github/workflows/web-test.yml
@@ -4,15 +4,6 @@ on:
   push: { branches: [ main, issue-* ] }
   pull_request:
   workflow_dispatch:
-  push:
-    paths:
-      - "apps/web/**"
-      - ".github/workflows/web-test.yml"
-  pull_request:
-    paths:
-      - "apps/web/**"
-      - ".github/workflows/web-test.yml"
-main
 
 jobs:
   vitest:
@@ -22,7 +13,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20"
-
+          cache: pnpm
       - uses: pnpm/action-setup@v4
         with:
           standalone: true        # lee packageManager del package.json raíz
@@ -30,18 +21,3 @@ jobs:
       - run: pnpm -v
       - run: pnpm -C apps/web install --frozen-lockfile=false
       - run: pnpm -C apps/web test:run
-
-
-
-
-
-      - uses: pnpm/action-setup@v3
-        with:
-          version: 9
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: "pnpm"
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm -C apps/web test:run 
-      main
