--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,42 +4,42 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
+    "test:ui": "vitest --ui",
+    "e2e": "playwright test",
+    "test": "vitest",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:run": "vitest run",
-    "e2e": "playwright test",
+    "e2e:report": "playwright show-report",
     "e2e:ui": "playwright test --ui",
-    "e2e:report": "playwright show-report"
+    "test:run": "vitest run",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.51.21",
-    "idb": "^8.0.0",
-    "idb-keyval": "^6.2.2",
-    "oidc-client-ts": "^2.3.0",
+    "react-router-dom": "^7.9.3",
+    "react-hot-toast": "^2.4.1",
+    "@tanstack/react-query": "^5.90.2",
+    "react-dom": "^18.2.0",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^7.9.3"
+    "idb-keyval": "^6.2.2",
+    "oidc-client-ts": "^2.3.0",
+    "react": "^18.2.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.55.1",
-    "@testing-library/jest-dom": "^6.9.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@vitejs/plugin-react": "^4.3.0",
-    "@vitest/coverage-v8": "3.2.4",
-    "@vitest/ui": "3.2.4",
-    "jsdom": "^27.0.0",
-    "typescript": "^5.4.5",
-    "vite": "^5.3.4",
-    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "3.2.4",
-    "whatwg-fetch": "^3.6.20"
+    "vite": "^5.3.4",
+    "@vitejs/plugin-react": "^4.3.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "@testing-library/user-event": "^14.6.1",
+    "@vitest/ui": "^3.2.4",
+    "jsdom": "^27.0.0",
+    "@testing-library/react": "^16.3.0",
+    "@playwright/test": "^1.55.1",
+    "whatwg-fetch": "^3.6.20",
+    "typescript": "^5.4.5",
+    "@testing-library/dom": "^10.0.0",
+    "@vitest/coverage-v8": "3.2.4",
+    "@testing-library/jest-dom": "^6.9.0"
   },
   "packageManager": "pnpm@10.17.1",
   "scripts": {
